# ALOHA

./: .gitignore  AUTHORS.m  CITATION.cff  INSTALL.m  README  README.m  README.md  VERSIONS.m  aloha.m  canevas_commentaires.m  index.html  params.json  prek.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: testing.yml
S_HFSS/CMOD/: S_CMOD_4waySplitter.m
S_HFSS/COMPASS/: Matrice_HAMAC_COMPASS6_M1.m  Matrice_HAMAC_COMPASS6_M2.m  Matrice_HAMAC_COMPASS8_MELANIE.m  Matrice_HFSS_old_COMPASS8.m  (+5 more)
antennas/: WEST_LH1.toml  WEST_LH1_half.toml  simple_antenna.toml
architecture_antenne/: antenna_C3_ITM.m  antenna_C3_WEST_ITM.m  antenna_C4_ITM.m  antenna_CMod_LH2_4rows.m  antenna_CMod_LH3_4rows.m  antenna_COMPASS_10wg.m  antenna_KSTAR_4waySplitter.m  antenna_KSTAR_grill.m  antenna_PA_ITM.m  antenna_example.m  antenne_C2.m  antenne_C3.m  antenne_C4.m  antenne_C4_1ligne.m  antenne_C7.m  antenne_CMod_LH1.m  antenne_CMod_LH2.m  antenne_COMPASS_D.m  antenne_ITER_3modules.m  antenne_JET.m  antenne_JET_1row.m  antenne_PAM_TOPLHA_4modules.m  antenne_elementaire.m  antenne_orso1.m  antenne_orso2.m  antenne_publiALOHA.m  antenne_reduite.m
doc/: ALOHA_Manual.lyx
libaloha/: S_antenne.m  S_plasma_1D.m  S_plasma_2D.m  aloha_antenna_constructor.m  aloha_antenna_getPAantenna.m  aloha_compute_RC.m  aloha_compute_averageEz.m  aloha_compute_averageEz_waveguides.m  aloha_compute_champEmbouchure1D.m  aloha_compute_champEmbouchure1D_v2.m  aloha_compute_champEmbouchure2D.m  aloha_compute_champPlasma1D.m  aloha_compute_directivity1D.m  aloha_compute_powerConservation.m  aloha_compute_spectrum.m  aloha_compute_spectrum1D.m  aloha_compute_spectrum2D.m  aloha_compute_spectrumFromEHfields.m  aloha_constants.m  aloha_constants_get.m  aloha_experimental_get.m  aloha_getAntenna.m  aloha_getArchitecture.m  aloha_init.m  aloha_isAntennaITM.m  aloha_message.m  aloha_scenario.m  aloha_setAntenna.m  aloha_setfield.m  aloha_utils_ITM2oldAntenna.m  aloha_utils_getAntennaCoordinates.m  aloha_utils_getAntennaCoordinatesFromCPO.m  aloha_utils_getRootPath.m  aloha_utils_renormalizeSparameters.m  comparaison.m  coordonnees_guides.m  reponse_antenne.m  voies_actives_passives.m
on_demand/: aloha_ondemand_plotPower.m  aloha_ondemand_scenario.m  runaloha.m
scenario/: batch_exemple.m  scenario_example.m
scenarios/: scenario_example.toml
(+403 files in other folders)
