[project]
name = "aloha"
version = "0.1.0"
description = "Advanced LOwer Hybrid Antenna"
readme = "README.md"
authors = [{ name = "Julien Hillairet" }]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scikit-rf>=1.11.0",
]


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.6",
    "ruff>=0.15.7",
  { include-group = "docs" },
  { include-group = "test" },
]

docs = []
test = [
    "pytest>=9.0.2",
]

[tool.ruff]
# larger line length for rule E501 (default is 88)
line-length = 120

[tool.ruff.lint]
select = ["B", "E", "F", "FA", "I", "NPY", "T", "UP", "W"]

