[project]
name = "aloha"
version = "0.1.0"
description = "Advanced LOwer Hybrid Antenna"
readme = "README.md"
authors = [{ name = "Julien Hillairet" }]
requires-python = ">=3.11"
license = { text = "LICENSE" }
dependencies = ["matplotlib>=3.10.8", "numpy>=2.2.6", "scikit-rf>=1.11.0"]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "prek>=0.3.6",
    "ruff>=0.15.7",
    { include-group = "docs" },
    { include-group = "test" },
]

docs = []
test = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
# larger line length for rule E501 (default is 88)
line-length = 120
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["B", "E", "F", "FA", "I", "NPY", "T", "UP", "W"]
ignore = ["F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "src", "doc"
]
addopts = "--cov=aloha --ignore-glob='*.ipynb_checkpoints'"
